--- a/clg_frontend/package.json
+++ b/clg_frontend/package.json
@@ -18,6 +18,7 @@
     "react-router-dom": "^7.3.0",
     "react-simple-typewriter": "^5.0.1",
     "react-typed": "^2.0.12",
+    "swiper": "^11.2.5",
     "tailwindcss": "^4.0.14",
     "typed.js": "^2.1.0"
   },
@@ -31,9 +32,5 @@
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^15.15.0",
     "vite": "^6.2.0"
-  },
-  "description": "This template provides a minimal setup to get React working in Vite with HMR and some ESLint rules.",
-  "main": "eslint.config.js",
-  "author": "",
-  "license": "ISC"
+  }
 }
