--- a/clg_frontend/package.json
+++ b/clg_frontend/package.json
@@ -12,10 +12,11 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.0.14",
     "framer-motion": "^12.5.0",
+    "lucide-react": "^0.483.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
-    "react-router-dom": "^7.3.0",
+    "react-router-dom": "^7.4.0",
     "react-simple-typewriter": "^5.0.1",
     "react-typed": "^2.0.12",
     "swiper": "^11.2.5",
